# namma-metro-ridership-tracker

./: .gitignore  .readthedocs.yaml  LICENSE  NammaMetro_Ridership_Dataset.csv  NammaMetro_Ridership_Processed.csv  NammaMetro_Stations_Dataset.csv  NammaMetro_network.ipynb  README.md  cronjob.sh  cronjobs.sh  holidays.csv  hypothesis_tester.ipynb  metro_stations.py  pyproject.toml  readme.md  requirements.txt  ridership.ipynb  ridership.py  ridership_1data.ipynb  ridership_2analysis.ipynb  ridership_3analysis.ipynb  ridership_4analysis.ipynb  ridership_5analysis.ipynb  ridership_analysis_kaggle.ipynb  significant_dates.csv  stations.ipynb
.github/workflows/: ridership_data.yml
generate-datacard/: generate_ridership_card.ipynb  ridership_datacard.html
scrolly-article/: aggregate-scrolly.ipynb  anomalies.json  daily-by-mode.json  daily-stats.json  dow-mode-stats.json  fare-hike-window.json  hypothesis-window.json  mode-shares.json  significant-events.json  stations.geojson
