[project]
name = "namma-metro-ridership-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.10.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pykernel>=0.1.6",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
